--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
     docker: &docker-image
       - image: cimg/base:2022.04
     resource_class: &docker-resource-class large
-    working_directory: *workingdir
+    working_directory: &workingdir /tmp/ci
     steps:
       - checkout
       - setup_remote_docker: &remote-docker
