--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,7 @@ repos:
     rev: "v3.0.0-alpha.4" # Use the sha / tag you want to point at
     hooks:
       - id: prettier
+        exclude: "deploy/helm"
 
   - repo: https://github.com/hadolint/hadolint
     rev: "v2.10.0"
@@ -13,6 +14,7 @@ repos:
     rev: "v4.3.0"
     hooks:
       - id: check-yaml
+        exclude: "deploy/helm"
       - id: check-merge-conflict
       - id: check-executables-have-shebangs
       - id: check-shebang-scripts-are-executable
