--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -44,5 +44,12 @@ repos:
       - id: go-build
       - id: go-mod-tidy
 
+  - repo: https://github.com/norwoodj/helm-docs
+    rev: v1.2.0
+    hooks:
+      - id: helm-docs
+        args:
+          - --chart-search-root=deploy/helm
+
 ci:
   autoupdate_schedule: quarterly
