--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,6 +22,7 @@ repos:
       - id: check-vcs-permalinks
       - id: trailing-whitespace
       - id: end-of-file-fixer
+        exclude: "deploy/helm/README.md"
 
   - repo: https://github.com/syntaqx/git-hooks
     rev: "v0.0.17"
