Renaming of symbols for readability - no need to abbreviate words in modern IDEs - remove go-vet hook as it is broken when go files are not in root directory

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,7 +38,7 @@ repos:
     rev: "v0.5.1"
     hooks:
       - id: go-fmt
-      - id: go-vet
+      # - id: go-vet
       - id: no-go-testing
       - id: go-critic
       - id: go-unit-tests
