--- a/.circleci/helmTestConfig.yaml
+++ b/.circleci/helmTestConfig.yaml
@@ -1,3 +1,4 @@
 # See https://github.com/helm/chart-testing#configuration
 remote: origin
-target-branch: gh-pages
+target-branch: main
+chart-dirs: deploy/helm
