--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ alertmanager-discord
 alertmanager-discord.darwin
 alertmanager-discord.linux
 cover.out
+
+# CircleCI orb Helm package & push
+.cr-release-packages
