--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,10 +7,14 @@ workflows:
   version: 2
   build-image:
     jobs:
-      - pre-commit:
+      - get-version:
           filters:
             tags: &filter-allow-all
               only: /.*/
+
+      - pre-commit:
+          filters:
+            tags: *filter-allow-all
 
       - docker-build:
           filters:
@@ -18,6 +22,8 @@ workflows:
             branches:
               ignore:
                 - main
+          requires:
+            - get-version
 
       - docker-build-and-publish:
           context:
@@ -28,25 +34,34 @@ workflows:
               only:
                 - main
           requires:
-            - pre-commit
-
-      - helm/package_and_push:
-          chart_dir_override: deploy/helm
-          chart_git_repo: "git@github.com:specklesystems/alertmanager-discord.git"
-          chart_stable_branch: gh-pages
-          context: github-write-alertmanagerdiscord-repo
-          # environment variables
-          # GIT_EMAIL & GIT_USERNAME
-          # are set in CircleCI project settings
-          filters:
-            tags: *filter-allow-all
-            branches: *filter-allow-all
-          requires:
-            - docker-build-and-publish
-            - docker-build
+            - get-version
             - pre-commit
 
 jobs:
+  get-version:
+    docker: &docker-image
+      - image: cimg/base:2022.04
+    working_directory: &workingdir /tmp/ci
+    steps:
+      - checkout
+      - run: mkdir -p workspace
+      - run:
+          name: set version
+          command: |
+            echo "export VERSION=$(.circleci/get_version.sh)" >> workspace/env-vars
+      - run:
+          name: store version
+          command: |
+            cat workspace/env-vars >> $BASH_ENV
+      - run:
+          name: echo version
+          command: |
+            echo "VERSION=${VERSION}"
+      - persist_to_workspace:
+          root: workspace
+          paths:
+            - env-vars
+
   pre-commit:
     parameters:
       config_file:
@@ -60,8 +75,8 @@ jobs:
         type: string
     docker:
       - image: speckle/pre-commit-runner:latest
-    resource_class: large
-    working_directory: &workingdir /tmp/ci
+    resource_class: &docker-resource-class medium
+    working_directory: *workingdir
     steps:
       - checkout
       - restore_cache:
@@ -83,11 +98,16 @@ jobs:
           when: on_fail
 
   docker-build-and-publish:
-    docker: &docker-image
-      - image: cimg/base:2022.04
-    resource_class: &docker-resource-class large
+    docker: *docker-image
+    resource_class: *docker-resource-class
     working_directory: *workingdir
     steps:
+      - attach_workspace:
+          at: /tmp/ci/workspace
+      - run:
+          name: populate environment variables
+          command: |
+            cat workspace/env-vars >> $BASH_ENV
       - checkout
       - setup_remote_docker: &remote-docker
           # a weird issue with yarn installing packages throwing EPERM errors
@@ -103,6 +123,12 @@ jobs:
     resource_class: *docker-resource-class
     working_directory: *workingdir
     steps:
+      - attach_workspace:
+          at: /tmp/ci/workspace
+      - run:
+          name: populate environment variables
+          command: |
+            cat workspace/env-vars >> $BASH_ENV
       - checkout
       - setup_remote_docker: *remote-docker
       - run:
