Only helm publish on main branch - add echo statements rather than 'x' debug in shell scripts

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,9 @@ workflows:
             - github-write-alertmanagerdiscord-repo
           filters:
             tags: *filter-allow-all
+            branches:
+              only:
+                - main
           requires:
             - docker-build
             - docker-build-and-publish
