CircleCI should not build and build-and-publish for tags - it should only build-and-publish

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,8 @@ workflows:
 
       - docker-build:
           filters:
-            tags: *filter-allow-all
+            tags: &filter-ignore-all
+              ignore: /.*/
             branches:
               ignore:
                 - main
