--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: "v4.0.0-alpha.8" # Use the sha / tag you want to point at
+    rev: "v3.1.0"
     hooks:
       - id: prettier
         exclude: "deploy/helm"
