--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,17 +1,17 @@
 repos:
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: "v3.0.0-alpha.4" # Use the sha / tag you want to point at
+    rev: "v3.1.0"
     hooks:
       - id: prettier
         exclude: "deploy/helm"
 
   - repo: https://github.com/hadolint/hadolint
-    rev: "v2.10.0"
+    rev: "v2.12.1-beta"
     hooks:
       - id: hadolint
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: "v4.3.0"
+    rev: "v4.5.0"
     hooks:
       - id: check-yaml
         exclude: "deploy/helm"
@@ -25,7 +25,7 @@ repos:
         exclude: "deploy/helm/README.md"
 
   - repo: https://github.com/syntaqx/git-hooks
-    rev: "v0.0.17"
+    rev: "v0.0.18"
     hooks:
       - id: circleci-config-validate
 
@@ -46,7 +46,7 @@ repos:
       - id: go-mod-tidy
 
   - repo: https://github.com/norwoodj/helm-docs
-    rev: v1.2.0
+    rev: v1.12.0
     hooks:
       - id: helm-docs
         args:
