chore(helm chart): add priority class name (#31)

--- a/deploy/helm/values.yaml
+++ b/deploy/helm/values.yaml
@@ -24,6 +24,9 @@ podAnnotations: {}
 podSecurityContext:
   fsGroup: 2000
 
+# -- https://kubernetes.io/docs/concepts/scheduling-eviction/pod-priority-preemption/
+priorityClassName: ""
+
 securityContext:
   capabilities:
     drop:
